test/TestSuite/Syntax/Errors/scenario_exists.tjp
project test "Test" "1.0" 2009-02-11 +1m  {

scenario plan "Plan" {  
  scenario s "First scenario s"
# MARK: error 6 scenario_exists
  scenario s "Second scenario s"
}
